User-user recommendation filter notebook created ! Normalization function created

--- a/sql_insertion.ipynb
+++ b/sql_insertion.ipynb
@@ -43,7 +43,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x25b243ec340>"
+       "<sqlite3.Cursor at 0x2526771d420>"
       ]
      },
      "execution_count": 3,
@@ -60,16 +60,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x25b243ec340>"
+       "<sqlite3.Cursor at 0x2526771d420>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
    "source": [
     "schema = \"CREATE TABLE ratings(user_id Integer, number_of_jokes_rated Integer,\"\n",
     "for i in range(1, 101):\n",
-    "    schema = schema + 'joke_{}_rating FLOAT(2), '.format(str(i))\n",
+    "    schema = schema + 'joke_{} FLOAT(2), '.format(str(i))\n",
     "schema = schema[:-2] + ')'\n",
     "c.execute(schema)"
    ]
@@ -91,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "[5 rows x 101 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -559,25 +559,25 @@
        "      <th></th>\n",
        "      <th>user_id</th>\n",
        "      <th>number_of_jokes_rated</th>\n",
-       "      <th>joke_1_rating</th>\n",
-       "      <th>joke_2_rating</th>\n",
-       "      <th>joke_3_rating</th>\n",
-       "      <th>joke_4_rating</th>\n",
-       "      <th>joke_5_rating</th>\n",
-       "      <th>joke_6_rating</th>\n",
-       "      <th>joke_7_rating</th>\n",
-       "      <th>joke_8_rating</th>\n",
+       "      <th>joke_1</th>\n",
+       "      <th>joke_2</th>\n",
+       "      <th>joke_3</th>\n",
+       "      <th>joke_4</th>\n",
+       "      <th>joke_5</th>\n",
+       "      <th>joke_6</th>\n",
+       "      <th>joke_7</th>\n",
+       "      <th>joke_8</th>\n",
        "      <th>...</th>\n",
-       "      <th>joke_91_rating</th>\n",
-       "      <th>joke_92_rating</th>\n",
-       "      <th>joke_93_rating</th>\n",
-       "      <th>joke_94_rating</th>\n",
-       "      <th>joke_95_rating</th>\n",
-       "      <th>joke_96_rating</th>\n",
-       "      <th>joke_97_rating</th>\n",
-       "      <th>joke_98_rating</th>\n",
-       "      <th>joke_99_rating</th>\n",
-       "      <th>joke_100_rating</th>\n",
+       "      <th>joke_91</th>\n",
+       "      <th>joke_92</th>\n",
+       "      <th>joke_93</th>\n",
+       "      <th>joke_94</th>\n",
+       "      <th>joke_95</th>\n",
+       "      <th>joke_96</th>\n",
+       "      <th>joke_97</th>\n",
+       "      <th>joke_98</th>\n",
+       "      <th>joke_99</th>\n",
+       "      <th>joke_100</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -707,45 +707,31 @@
        "</div>"
       ],
       "text/plain": [
-       "       user_id  number_of_jokes_rated  joke_1_rating  joke_2_rating  \\\n",
-       "73416    73417                     21           99.0           99.0   \n",
-       "73417    73418                     16           99.0           99.0   \n",
-       "73418    73419                     35           99.0           99.0   \n",
-       "73419    73420                     21           99.0           99.0   \n",
-       "73420    73421                     35           99.0           99.0   \n",
+       "       user_id  number_of_jokes_rated  joke_1  joke_2  joke_3  joke_4  joke_5  \\\n",
+       "73416    73417                     21    99.0    99.0    99.0    99.0    5.78   \n",
+       "73417    73418                     16    99.0    99.0    99.0    99.0    5.24   \n",
+       "73418    73419                     35    99.0    99.0    99.0    99.0   -3.93   \n",
+       "73419    73420                     21    99.0    99.0    99.0    99.0    9.42   \n",
+       "73420    73421                     35    99.0    99.0    99.0    99.0    0.19   \n",
        "\n",
-       "       joke_3_rating  joke_4_rating  joke_5_rating  joke_6_rating  \\\n",
-       "73416           99.0           99.0           5.78           8.45   \n",
-       "73417           99.0           99.0           5.24          99.00   \n",
-       "73418           99.0           99.0          -3.93          99.00   \n",
-       "73419           99.0           99.0           9.42           9.66   \n",
-       "73420           99.0           99.0           0.19          99.00   \n",
+       "       joke_6  joke_7  joke_8  ...  joke_91  joke_92  joke_93  joke_94  \\\n",
+       "73416    8.45   99.00    8.20  ...     99.0     99.0     99.0     99.0   \n",
+       "73417   99.00   99.00    5.68  ...     99.0     99.0     99.0     99.0   \n",
+       "73418   99.00   -9.03   -2.67  ...     99.0     99.0     99.0     99.0   \n",
+       "73419    9.66   99.00    9.17  ...     99.0     99.0     99.0     99.0   \n",
+       "73420   99.00   -1.50    7.82  ...     99.0     99.0     99.0     99.0   \n",
        "\n",
-       "       joke_7_rating  joke_8_rating  ...  joke_91_rating  joke_92_rating  \\\n",
-       "73416          99.00           8.20  ...            99.0            99.0   \n",
-       "73417          99.00           5.68  ...            99.0            99.0   \n",
-       "73418          -9.03          -2.67  ...            99.0            99.0   \n",
-       "73419          99.00           9.17  ...            99.0            99.0   \n",
-       "73420          -1.50           7.82  ...            99.0            99.0   \n",
-       "\n",
-       "       joke_93_rating  joke_94_rating  joke_95_rating  joke_96_rating  \\\n",
-       "73416            99.0            99.0            99.0            99.0   \n",
-       "73417            99.0            99.0            99.0            99.0   \n",
-       "73418            99.0            99.0            99.0            99.0   \n",
-       "73419            99.0            99.0            99.0            99.0   \n",
-       "73420            99.0            99.0            99.0            99.0   \n",
-       "\n",
-       "       joke_97_rating  joke_98_rating  joke_99_rating  joke_100_rating  \n",
-       "73416            99.0            99.0            99.0             99.0  \n",
-       "73417            99.0            99.0            99.0             99.0  \n",
-       "73418            99.0            99.0            99.0             99.0  \n",
-       "73419            99.0            99.0            99.0             99.0  \n",
-       "73420            99.0            99.0            99.0             99.0  \n",
+       "       joke_95  joke_96  joke_97  joke_98  joke_99  joke_100  \n",
+       "73416     99.0     99.0     99.0     99.0     99.0      99.0  \n",
+       "73417     99.0     99.0     99.0     99.0     99.0      99.0  \n",
+       "73418     99.0     99.0     99.0     99.0     99.0      99.0  \n",
+       "73419     99.0     99.0     99.0     99.0     99.0      99.0  \n",
+       "73420     99.0     99.0     99.0     99.0     99.0      99.0  \n",
        "\n",
        "[5 rows x 102 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
